--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         #four-col-conatainer .column {
             flex: 22.5%;
-            padding: 20px;
+/*             padding: 20px; */
             min-height: 296px;
             display: flex;
             align-items: center;
@@ -147,6 +147,12 @@
             display: flex;
             align-items: center;
             justify-content: center;
+        }
+        a.card_links {
+            display: block;
+            width: 100%;
+            height: 100%;
+            padding: 20px;
         }
 
         @media(max-width: 450px) {
@@ -327,35 +333,43 @@
                 <div class="row">
                     <div class="card_content_wrapper column"
                         style="background: url(./Assessori\ Moto.webp) no-repeat center; background-size: cover;">
+                        <a class="card_links" href="/it/ACCESSORI-MOTO-13">
                         <div class="inside_full_width">
                             <div class="text-conta">
                                 <h3> ACCESSORI MOTO </h3>
                             </div>
                         </div>
+                        </a>
                     </div>
                     <div class="card_content_wrapper column"
                         style="background: url(./abbigliamento\ MOTO.webp) no-repeat center; background-size: cover;">
+                        <a class="card_links" href="/it/ABBIGLIAMENTO-MOTO-1">
                         <div class="inside_full_width">
                             <div class="text-conta">
                                 <h3> ABBIGLIAMENTO MOTO</h3>
                             </div>
                         </div>
+                        </a>
                     </div>
                     <div class="card_content_wrapper column"
                         style="background: url(./Caschi\ MOTO.webp) no-repeat center; background-size: cover;">
+                        <a class="card_links" href="/it/CASCHI-20">
                         <div class="inside_full_width">
                             <div class="text-conta">
                                 <h3>CASCHI MOTO </h3>
                             </div>
                         </div>
+                        </a>
                     </div>
                     <div class="card_content_wrapper column"
                         style="background: url(./Ricambi\ MOTO.webp) no-repeat center; background-size: cover;">
+                        <a class="card_links" href="/it/RICAMBI-MOTO-4">
                         <div class="inside_full_width">
                             <div class="text-conta">
                                 <h3> RICAMBI MOTO</h3>
                             </div>
                         </div>
+                        </a>
                     </div>
                 </div>
             </div>
