--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
             width: 100%;
             height: 100%;
             padding: 20px;
+            text-decoration: none;
         }
 
         @media(max-width: 450px) {
